update naming file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <div>
 
-         <a href="Test.html">Home</a>
+         <a href="index.html">Home</a>
          <a href="subfolder/kontak.html">Kontak</a>
 
         </div>
