update naming file 2

--- a/subfolder/kontak.html
+++ b/subfolder/kontak.html
@@ -10,7 +10,7 @@
       </-- Menu Website -->
       <div>
 
-         <a href="../index.html">Home</a>
+         <a href="../Test.html">Home</a>
          <a href="kontak.html">Kontak</a>
 
       </div>
