--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head> 
-        <title> Sekolah Koding </title>
+      <title> Sekolah Koding </title>
+
+      <link rel="stylesheet" href="style.css">
     </head>
 
+    id, class
     <body> 
       
        </-- Bagian Awal Isinya Text Heading -->
@@ -13,8 +16,8 @@
 
         <div>
 
-         <a href="index.html">Home</a>
-         <a href="subfolder/kontak.html">Kontak</a>
+         <a href="index.html" class="menu">Home</a>
+         <a href="subfolder/kontak.html" class="menu">Kontak</a>
 
         </div>
 
@@ -23,7 +26,7 @@
          <h2> Tutorial Online Untuk Belajar <div>Membuat Website</div> </h2>
        </div>
        <div>
-         <p> Selamat Datang Di Website <br>sekolah Koding </p>
+         <p id="text_pembuka"> Selamat Datang Di Website sekolah Koding </p>
          <a href="https://www.instagram.com/achmaddwanda/?hl=id" target="_blank"> Pencet Disini</a>
         </div>
         <a href="https://www.twitter.com" target="_blank"> Website Nya Twitter</a> 
@@ -32,7 +35,7 @@
        <div>
          <img src="test.png" alt="text sekolah koding" height="100" width="100">
 
-         <iframe src="https://akd.unpas.ac.id/fisip/modul/simpati/session_timeout.php" height="500" width="500"> </iframe>
+         <iframe src ="https://akd.unpas.ac.id/fisip/modul/simpati/session_timeout.php" height="200" width="200" > </iframe>
 
          <p>Kita akan <em>Belajar</em> cara memformat text pada <b>HTML</b> </p>
        </div> 
