insert instagram logo for learning

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
        </div>
        <div>
          <p id="text_pembuka"> Selamat Datang Di Website sekolah Koding </p>
-         <a href="https://www.instagram.com/achmaddwanda/?hl=id" target="_blank"> Pencet Disini</a>
+         <a href="https://www.instagram.com/achmaddwanda/?hl=id" target="_blank"> 
+           <img src="instagram.png" width="75" height="50"> 
+         </a>
         </div>
         <a href="https://www.twitter.com" target="_blank"> Website Nya Twitter</a> 
       
